Update LightPath z-index to avoid covering Floats

--- a/love/src/components/AuxTel/Mount/LightPath.module.css
+++ b/love/src/components/AuxTel/Mount/LightPath.module.css
@@ -1,5 +1,6 @@
 .container {
   width: 35em;
+  z-index: 1;
 }
 
 .container svg{
